# Safebank-tdd

./: README.md  pyproject.toml  pytest.ini  requirements.txt
codigo/: safebank.py
tests/: test_safebank.py
